// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bucket is public 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"cdktfstack_wingapp_mybucket_ResourceGroup_4BB391A5\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"my_bucket-c870ab9d\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"cdktfstack_wingapp_mybucket_StorageAccount_D784A3B3\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.cdktfstack_wingapp_mybucket_ResourceGroup_4BB391A5.location}\\",
        \\"name\\": \\"mybucketc870ab9d\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.cdktfstack_wingapp_mybucket_ResourceGroup_4BB391A5.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"cdktfstack_wingapp_mybucket_Bucket_BFFD834B\\": {
        \\"container_access_type\\": \\"public\\",
        \\"name\\": \\"my-bucket-c870ab9d\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.cdktfstack_wingapp_mybucket_StorageAccount_D784A3B3.name}\\"
      }
    }
  }
}"
`;

exports[`bucket is public 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "cdktf-stack/wing-app/WingLogger",
              },
              "azure": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.1",
                },
                "id": "azure",
                "path": "cdktf-stack/wing-app/azure",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.1",
                    },
                    "id": "Bucket",
                    "path": "cdktf-stack/wing-app/my_bucket/Bucket",
                  },
                  "ResourceGroup": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                      "version": "5.0.1",
                    },
                    "id": "ResourceGroup",
                    "path": "cdktf-stack/wing-app/my_bucket/ResourceGroup",
                  },
                  "StorageAccount": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                      "version": "5.0.1",
                    },
                    "id": "StorageAccount",
                    "path": "cdktf-stack/wing-app/my_bucket/StorageAccount",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "cdktf-stack/wing-app/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket name valid 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"cdktfstack_wingapp_TheUncannyBucket_ResourceGroup_DF5E7978\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"The-Uncanny-Bucket-c850c9f6\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"cdktfstack_wingapp_TheUncannyBucket_StorageAccount_8D375857\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.cdktfstack_wingapp_TheUncannyBucket_ResourceGroup_DF5E7978.location}\\",
        \\"name\\": \\"theuncannybucketc850c9f6\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.cdktfstack_wingapp_TheUncannyBucket_ResourceGroup_DF5E7978.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"cdktfstack_wingapp_TheUncannyBucket_4A90C2DF\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"the-uncanny-bucket-c850c9f6\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.cdktfstack_wingapp_TheUncannyBucket_StorageAccount_8D375857.name}\\"
      }
    }
  }
}"
`;

exports[`bucket name valid 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "The-Uncanny-Bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.1",
                    },
                    "id": "Bucket",
                    "path": "cdktf-stack/wing-app/The-Uncanny-Bucket/Bucket",
                  },
                  "ResourceGroup": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                      "version": "5.0.1",
                    },
                    "id": "ResourceGroup",
                    "path": "cdktf-stack/wing-app/The-Uncanny-Bucket/ResourceGroup",
                  },
                  "StorageAccount": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                      "version": "5.0.1",
                    },
                    "id": "StorageAccount",
                    "path": "cdktf-stack/wing-app/The-Uncanny-Bucket/StorageAccount",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "The-Uncanny-Bucket",
                "path": "cdktf-stack/wing-app/The-Uncanny-Bucket",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "cdktf-stack/wing-app/WingLogger",
              },
              "azure": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.1",
                },
                "id": "azure",
                "path": "cdktf-stack/wing-app/azure",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"cdktfstack_wingapp_mybucket_ResourceGroup_4BB391A5\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"my_bucket-c870ab9d\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"cdktfstack_wingapp_mybucket_StorageAccount_D784A3B3\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.cdktfstack_wingapp_mybucket_ResourceGroup_4BB391A5.location}\\",
        \\"name\\": \\"mybucketc870ab9d\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.cdktfstack_wingapp_mybucket_ResourceGroup_4BB391A5.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"cdktfstack_wingapp_mybucket_Bucket_BFFD834B\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"my-bucket-c870ab9d\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.cdktfstack_wingapp_mybucket_StorageAccount_D784A3B3.name}\\"
      }
    }
  }
}"
`;

exports[`create a bucket 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "cdktf-stack/wing-app/WingLogger",
              },
              "azure": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.1",
                },
                "id": "azure",
                "path": "cdktf-stack/wing-app/azure",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.1",
                    },
                    "id": "Bucket",
                    "path": "cdktf-stack/wing-app/my_bucket/Bucket",
                  },
                  "ResourceGroup": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                      "version": "5.0.1",
                    },
                    "id": "ResourceGroup",
                    "path": "cdktf-stack/wing-app/my_bucket/ResourceGroup",
                  },
                  "StorageAccount": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                      "version": "5.0.1",
                    },
                    "id": "StorageAccount",
                    "path": "cdktf-stack/wing-app/my_bucket/StorageAccount",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "cdktf-stack/wing-app/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
